force-app/main/default/objects/VCG_CPQ_User_Hierarchy__c/VCG_CPQ_User_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ User Hierarchy</label>
    <nameField>
        <displayFormat>UH-{000}</displayFormat>
        <label>VCG CPQ User Heirarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ User Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>