force-app/main/default/objects/VCG_CPQ_User_Hierarchy__c/fields/Related_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Role__c</fullName>
    <label>Related User Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>