force-app/main/default/objects/VCG_CPQ_User_Hierarchy__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>