force-app/main/default/objects/VCG_CPQ_User_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Related_User_Role__c</columns>
    <columns>Related_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>Roadnet Hierarchies</label>
    <language>en_US</language>
</ListView>